# magic-roullete

./: .env.devnet  .git-commit-fixes.txt  .git-commit-message-fix.txt  .git-commit-message-tests.txt  .git-commit-message.txt  .gitignore  Anchor.toml  COMPLETE_TEST_SUMMARY.md  CURRENT_STATUS.md  Cargo.toml  DEPLOYMENT_GUIDE.md  FINAL_EXECUTION_SUMMARY.md  FLUTTER_APP_COMPLETE_GUIDE.md  HELIUS_INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  INTEGRATION_TESTS_SUMMARY.md  KAMINO_INTEGRATION_STATUS.md  KAMINO_TESTING_GUIDE.md  MAGICBLOCK_INTEGRATION_COMPLETE.md  MAGICBLOCK_INTEGRATION_GUIDE.md  QUICK_START.md  README.md  SECURITY_NOTES.md  SESSION_SUMMARY.md  TESTING_GUIDE.md  TEST_RESULTS.md  package-lock.json  package.json  skills-lock.json  temp_idl.json  tsconfig.json
ai-bot/: .env.example  OPENROUTER_INTEGRATION.md  QUICKSTART.md  README.md  package-lock.json  package.json
app/: package.json
backend/: .env.example  README.md  package-lock.json  package.json  schemathesis-config.yaml  test-supabase.js  tsconfig.json
client/: example.ts  magicblock-client.ts
docs/: ARCHITECTURE.md  COMPRESSED_TOKENS.md  DEPLOYMENT.md  GAME_MECHANICS.md  MAGIC_ROULETTE_WHITEPAPER.md  PROJECT_SUMMARY.md  QUICKSTART.md  ROADMAP.md
examples/: README.md  kamino-squads-example.ts  magicblock-integration.ts  simple-game-flow.ts  sol-native-game.ts
frontend/: POLISH_IMPROVEMENTS.md  README.md  WALLET_INTEGRATION.md  package.json  pnpm-lock.yaml
kiro-framer/: index.html  package-lock.json  package.json
magic-roullete/: BUBBLEWRAP.md  BUILD.md  DEPLOY.md  README.md  app.json  package-lock.json  package.json
misc/: .git-commit-magicblock.txt  BUILD_GAME_SUMMARY.md  (+87 more)
programs/magic-roulette/: Cargo.toml
programs/magic-roulette/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/magic-roulette/src/instructions/: ai_take_shot.rs  claim_rewards.rs  create_ai_game.rs  create_game.rs  create_game_sol.rs  create_game_with_loan.rs  delegate.rs  er_instructions.rs  finalize.rs  finalize_game_sol.rs  finalize_game_with_loan.rs  initialize_platform.rs  initialize_platform_multisig.rs  join_game.rs  join_game_sol.rs  mod.rs  process_vrf_result.rs  take_shot.rs  vrf_instructions.rs
(+422 files in other folders)
